css/custom.css
html, body {
    height: 100%;
    width: 100%;
    font-size: 12px;
    margin: 0px;
    font-family: 'Open Sans', sans-serif;
    background-color: black;
    line-height: 1.33;
}

.one.column,
.one.columns {
    width: 4.66666666667%;
}

.two.columns {
    width: 13.3333333333%;
}

.three.columns {
    width: 22%;
}

.four.columns {
    width: 30.6666666667%;
}

.five.columns {
    width: 39.3333333333%;
}

.six.columns {
    width: 48%;
}

.seven.columns {
    width: 56.6666666667%;
}

.eight.columns {
    width: 65.3333333333%;
}

.nine.columns {
    width: 74.0%;
}

.ten.columns {
    width: 82.6666666667%;
}

.eleven.columns {
    width: 91.3333333333%;
}

.twelve.columns {
    width: 100%;
    margin-left: 0;
}

#spacer {
    height: 0px;
    background: #000000;
}

/* Larger than mobile */
@media only screen and (min-width: 522px) {
    html, body {
        font-size: 14px;
    }

    .container {
        margin-bottom: auto;
    }

    #spacer {
        height: 150px;
        background: #000000;
    }
}

/* Larger than mobile */
@media only screen and (min-width: 755px) {
    html, body {
        font-size: 16px;
    }
}

.container {
    position: relative;
    width: 100%;
    max-width: 512px;
    background-color: whitesmoke;
}

.row {
    display: flex;
}

.row.info {
    padding-bottom: 14px;
}

.category {
    padding-left: 20px;
    font-weight: 700;
}

.desc {
    padding-left: 54px;
}

#menu {
    margin-bottom: 20px;
    margin-top: 20px;
    margin-left: 24px;
}

#header {
    height: 64px;
    background: #2D525F;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.50);
}

#status {
    padding-top: 32px;
}

#app-title {
    color: white;
    font-size: 20px;
    margin-left: -4px;
    padding-top: 19px;
    padding-bottom: 20px;
}

hr {
    margin-top: 18px;
    margin-bottom: 38px;
    margin-left: 10px;
    margin-right: 10px;
    border-color: #424242;
}

.action {
    text-align: center;
    margin-top: 12px;
    margin-bottom: 12px;
    z-index: 2;
}

#action-email {
    display: inline-block;
    height: 48px;
    width: 48px;

    background: #00D1CF;
    border: 2px solid #FFFFFF;
    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.50);
    border-radius: 50px;
    font-size: 32px;
}

.action-email-icon {
    position: relative;
    bottom: -2px;
    color: white;
}

#action-email:hover {
    background: #12A3A2;
}

